fix: como-wrap top to 40px

--- a/styles.css
+++ b/styles.css
@@ -563,7 +563,7 @@ ul{list-style:none}
 }
 .como-wrap{
   position:absolute;
-  top:0;left:0;right:0;bottom:0;
+  top:40px;left:0;right:0;bottom:0;
   display:flex;
   flex-direction:column;
   align-items:flex-start;
